2004-08-01  Bruno Haible  <bruno@clisp.org>

	* record.d (check_initialization_argument_list): Internationalize
	error message.

2004-09-15  Bruno Haible  <bruno@clisp.org>

	* constobj.d (version): Bump because of changes to CLOS macro
	expansions.

2004-09-12  Bruno Haible  <bruno@clisp.org>

	Implement SLOT-VALUE-USING-CLASS and friends.
	* lispbibl.d (SlotDefinition): Add fields slotdef_efm_svuc,
	slotdef_efm_ssvuc, slotdef_efm_sbuc, slotdef_efm_smuc.
	* record.d (slot_using_class_up): New function.
	(CLOS::%SLOT-VALUE-USING-CLASS, CLOS::%SET-SLOT-VALUE-USING-CLASS,
	CLOS::%SLOT-BOUNDP-USING-CLASS, CLOS::%SLOT-MAKUNBOUND-USING-CLASS):
	New functions.
	(slot_up): Remove function.
	(CLOS:SLOT-VALUE): Inline slot_up. Handle the general case slotinfo:
	call CLOS:SLOT-VALUE-USING-CLASS effective method if necessary.
	((SETF CLOS:SLOT-VALUE)): Handle the general case slotinfo:
	call (SETF CLOS:SLOT-VALUE-USING-CLASS) effective method if necessary.
	(CLOS:SLOT-BOUNDP): Inline slot_up. Handle the general case slotinfo.
	(CLOS:SLOT-MAKUNBOUND): Likewise.
	(CLOS::%SHARED-INITIALIZE): Handle the general case slotinfo.
	(CLOS::%REINITIALIZE-INSTANCE, do_initialize_instance): Likewise.
	* init.lisp: Export slot-value-using-class,
	slot-boundp-using-class, slot-makunbound-using-class.
	* clos-package.lisp: Likewise.
	* clos-slotdef1.lisp (effective-slot-definition): Add slots efm-svuc,
	efm-ssvuc, efm-sbuc, efm-smuc.
	(*<effective-slot-definition>-efm-...-location*): New constants.
	(slot-definition-efm-svuc, slot-definition-efm-ssvuc,
	slot-definition-efm-sbuc, slot-definition-efm-smuc): New accessors.
	(make-instance-<standard-effective-slot-definition>,
	structure-effective-slot-definition-initff,
	structure-effective-slot-definition-readonly,
	make-instance-<structure-effective-slot-definition>): Update.
	* clos-slotdef3.lisp (slot-definition-efm-svuc,
	slot-definition-efm-ssvuc, slot-definition-efm-sbuc,
	slot-definition-efm-smuc): New accessors.